--- a/HACKING
+++ b/HACKING
@@ -24,3 +24,20 @@ to see a code coverage report.
 
 For translations, please sign up for transifex.com and contribute to the
 virt-manager project.
+
+
+  Submitting patches
+  ==================
+
+Patches should be developed against a git checkout and _not_ a source
+release. The git repo is at
+
+  git://git.fedorahosted.org/git/virt-manager.git
+
+For an web view, see:
+
+  https://git.fedorahosted.org/cgit/virt-manager.git/
+
+Patches should be sent to the mailing list (see README for details). Using
+git format-patch/send-email is preferred, but an attachment with
+format-patch output is fine too.
