--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,7 @@
 check all XXX/TODO in the code, make sure nothing important is missing
 revive import blacklist for virtinst code, maybe just a unittest that checks Gtk isn't in globals ?
 break out osdistro bits so we don't need to carry virt-install.pod
-merge README, reference that we merged virtinst and see that repo for old NEWS, etc.
+gnome keyring entirely over dbus?
 
 is dbus uniqueness still working? I dropped the service file but it
     shouldn't be necc.
