po: Fix error in ja.po

--- a/po/ja.po
+++ b/po/ja.po
@@ -2498,7 +2498,7 @@ msgstr "libvirt サービスが開始されている必要があります"
 #: ../virtManager/engine.py:298
 #, python-format
 msgid "Error polling connection '%s': %s"
-msgstr "接続をポーリング中にエラー '%s': ％s"
+msgstr "接続をポーリング中にエラー '%s': %s"
 
 #: ../virtManager/engine.py:494
 #, python-format
