virt-install: Error if -c <uri> specified
-c maps to --cdrom for virt-install, but for other libvirt tools like
virsh it maps to --connect.

Handle -c and --cdrom a little differently: if -c contains '://',
error out with an explanation. User can work around it by using
--cdrom. This could in theory break some users, but the change they
make will be backwards compatible.

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -197,7 +197,7 @@ including images that virt-install is asked to create.
 
 =over 2
 
-=item  -c CDROM, --cdrom=CDROM
+=item  --cdrom=CDROM
 
 File or device use as a virtual CD-ROM device for fully virtualized guests.
 It can be path to an ISO image, or to a CDROM device. It can also be a URL
