--- a/man/virt-clone.pod
+++ b/man/virt-clone.pod
@@ -200,8 +200,7 @@ new guest can do a filesystem resize when it boots.
 =head1 AUTHOR
 
 Written by Kazuki Mizushima, Cole Robinson, and a team of many other
-contributors. See the AUTHORS file in the source distribution for the
-complete list of credits.
+contributors.
 
 =head1 BUGS
 
