--- a/man/virt-convert.pod
+++ b/man/virt-convert.pod
@@ -144,10 +144,7 @@ Convert a 64-bit hvm guest:
 
 =head1 AUTHOR
 
-Written by Joey Boggs, John Levon, and Cole Robinson
-
-See the AUTHORS file in the source distribution for the complete list
-of credits.
+Written by Joey Boggs, John Levon, and Cole Robinson.
 
 =head1 BUGS
 
