--- a/man/virt-image-xml.pod
+++ b/man/virt-image-xml.pod
@@ -224,8 +224,7 @@ To create a virtual machine, save the above XML in F<image.xml> and run:
 
 =head1 AUTHOR
 
-Written by David Lutterkort. See the AUTHORS file in the source distribution
-for the complete list of credits.
+Written by David Lutterkort.
 
 =head1 BUGS
 
