--- a/man/virt-image.pod
+++ b/man/virt-image.pod
@@ -228,8 +228,7 @@ do not create or start a virtual machine:
 
 =head1 AUTHOR
 
-Written by David Lutterkort and Cole Robinson. See the AUTHORS file in
-the source distribution for the complete list of credits.
+Written by David Lutterkort and Cole Robinson.
 
 =head1 BUGS
 
