--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1343,8 +1343,7 @@ specifying a serial device hooked to a PTY on the host machine.
 =head1 AUTHORS
 
 Written by Daniel P. Berrange, Hugh Brock, Jeremy Katz, Cole Robinson and a
-team of many other contributors. See the AUTHORS file in the source
-distribution for the complete list of credits.
+team of many other contributors.
 
 =head1 BUGS
 
