INSTALL: Fix typo in RPM generation command
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/INSTALL
+++ b/INSTALL
@@ -12,7 +12,7 @@ To install the software into /usr/local (usually), you can do:
 
 To build an RPM, you can run:
 
-    python setup.py run
+    python setup.py rpm
 
 setup.py generally has all the build and install commands, for more info see:
 
