Prep for release 0.10.0

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,17 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.10.0 (June 19, 2013)
+------------------------------
+- Merged code with python-virtinst. virtinst is no longer public
+- Port from GTK2 to GTK3 (Daniel Berrange, Cole Robinson)
+- Port from gconf to gsettings
+- Port from autotools to python distutils
+- Remove virt-manager-tui
+- Remove HAL support
+- IPv6 and static route virtual network support (Gene Czarcinski)
+- virt-install: Add --cpu host-passthrough (Ken ICHIKAWA, Hu Tao)
+
 Release 0.9.5 (April 01, 2013)
 ------------------------------
 - Enable adding virtio-scsi disks (Chen Hanxiao)
