Make virt-manager man page consistent.

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -28,7 +28,7 @@ Display command line help summary
 
 =item -c URI, --connect=URI
 
-Specify the hypervisor connection URI
+Specify the hypervisor connection C<URI>
 
 =item --debug
 
