--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -44,6 +44,15 @@ current terminal. Useful for seeing possible errors dumped to stdout/stderr.
 
 Don't autostart any libvirt connections when launching C<virt-manager>.
 
+=item --show-DIALOG-WINDOW
+
+Display the corresponding C<DIALOG-WINDOW> when launching C<virt-manager>. The
+manager window will not be shown at startup in this case.
+
+The following C<DIALOG-WINDOW> options are currently available:
+
+=over 4
+
 =item --show-domain-creator
 
 Display the wizard for creating new virtual machines
@@ -67,6 +76,8 @@ unique ID matching C<UUID>
 
 Display the main window summarizing performance for all virtual machines
 on the host.
+
+=back
 
 =back
 
