virt-install: Make default graphics configurable
The '--default-graphics' option of 'setup.py configure' only affects
virt-manager, but not virt-install.  This should be unified, so this
patch checks whether default_graphics taken from the cli is supported
and uses that option.

Resolves: https://bugzilla.redhat.com/show_bug.cgi?id=912615

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -639,9 +639,9 @@ This parameter is deprecated in favour of C<--network NETWORK,mac=12:34...>
 
 =head2 Graphics Configuration
 
-If no graphics option is specified, C<virt-install> will default to
-'--graphics vnc' if the DISPLAY environment variable is set, otherwise
-'--graphics none' is used.
+If no graphics option is specified, C<virt-install> will try to select
+the appropriate graphics if the DISPLAY environment variable is set,
+otherwise '--graphics none' is used.
 
 =over 2
 
