add ALT Linux support

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -263,6 +263,10 @@ ftp://ftp.uwsg.indiana.edu/linux/mandrake/official/2009.0/i586/
 
 ftp://distrib-coffee.ipsl.jussieu.fr/pub/linux/Mageia/distrib/1
 
+=item ALT Linux
+
+ftp://ftp.altlinux.org/pub/distributions/ALTLinux/
+
 =back
 
 =item  --pxe
