change virt-manager option spice-disable-usbredir to spice-disable-auto-usbredir
This is option is supposed to turn off Auto USB redirection feature
rather than USB redirection support. So adding 'auto' make it clearer.
And add its docs to manpage.

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -78,6 +78,9 @@ unique ID matching C<UUID>
 Display the main window summarizing performance for all virtual machines
 on the host.
 
+=item --spice-disable-auto-usbredir
+Auto USB redirection is supportted by default. This option switches off it.
+
 =back
 
 =back
