--- a/NEWS
+++ b/NEWS
@@ -30,7 +30,7 @@ Release 0.9.3 (July 09, 2012)
 
 Release 0.9.2 (July 09, 2012)
 -----------------------------
-- Convert to gtkbuilder: UI can now be editted with modern glade tool
+- Convert to gtkbuilder: UI can now be edited with modern glade tool
 - virt-manager no longer runs on RHEL5, but can manage a remote RHEL5
   host
 - Option to configure spapr net and disk devices for pseries (Li Zhang)
