man: Fix a build error, misc improvements

--- a/man/virt-clone.pod
+++ b/man/virt-clone.pod
@@ -203,7 +203,8 @@ Please see http://virt-manager.org/page/BugReporting
 
 =head1 COPYRIGHT
 
-Copyright (C) Fujitsu Limited, and various contributors.
+Copyright (C) Fujitsu Limited, Copyright (C) Red Hat, Inc,
+and various contributors.
 This is free software. You may redistribute copies of it under the terms
 of the GNU General Public License C<http://www.gnu.org/licenses/gpl.html>.
 There is NO WARRANTY, to the extent permitted by law.
