--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -350,7 +350,7 @@ network PXE boot. Additionally enable BIOS boot menu prompt.
 Have guest permanently boot off a local kernel/initrd pair, with the
 specified kernel options.
 
-=item B<--boot kernel=KERNEL,initrd=INITRD,dtb=DTB
+=item B<--boot kernel=KERNEL,initrd=INITRD,dtb=DTB>
 
 Have guest permanently boot off a local kernel/initrd pair with an
 external device tree binary. DTB can be required for some non-x86
@@ -1380,7 +1380,7 @@ Please see http://virt-manager.org/page/BugReporting
 
 =head1 COPYRIGHT
 
-Copyright (C) 2006-2011 Red Hat, Inc, and various contributors.
+Copyright (C) Red Hat, Inc, and various contributors.
 This is free software. You may redistribute copies of it under the terms of
 the GNU General Public License C<http://www.gnu.org/licenses/gpl.html>. There
 is NO WARRANTY, to the extent permitted by law.
