--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -26,6 +26,10 @@ The following options are accepted when running C<virt-manager>:
 
 Display command line help summary
 
+=item --version
+
+Show virt-manager's version number and exit
+
 =item -c URI, --connect=URI
 
 Specify the hypervisor connection C<URI>
@@ -93,7 +97,7 @@ Please see L<http://virt-manager.org/page/BugReporting>
 
 =head1 COPYRIGHT
 
-Copyright (C) 2006-2013 Red Hat, Inc, and various contributors.
+Copyright (C) Red Hat, Inc, and various contributors.
 This is free software. You may redistribute copies of it under the terms of the GNU General
 Public License C<http://www.gnu.org/licenses/gpl.html>. There is NO WARRANTY, to the extent
 permitted by law.
