--- a/man/virt-image-xml.pod
+++ b/man/virt-image-xml.pod
@@ -228,7 +228,7 @@ Please see C<http://virt-manager.org/page/BugReporting>
 
 =head1 COPYRIGHT
 
-Copyright (C) 2006-2012 Red Hat, Inc, and various contributors.
+Copyright (C) Red Hat, Inc, and various contributors.
 This is free software. You may redistribute copies of it under the terms
 of the GNU General Public License C<http://www.gnu.org/licenses/gpl.html>.
 There is NO WARRANTY, to the extent permitted by law.
