virt-install: Add --boot useserial=on
Which gives bios output over serial console via sgabios

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -361,6 +361,11 @@ configurations like ARM or PPC
 Use BIOSPATH as the virtual machine BIOS. Only valid for fully virtualized
 guests.
 
+=item B<--boot menu=on,useserial=on>
+
+Enable the bios boot menu, and enable sending bios text output over
+serial console.
+
 =back
 
 =back
