virt-install: accept a single argument form for RNG devices
Detect the "--rng /dev/random" case and assume it is the "random" type.

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1258,6 +1258,11 @@ An example invocation:
 
 Connect to localhost to the TCP port 8000 to get entropy data.
 
+=item B<--rng /dev/random>
+
+Use the /dev/random device to get entropy data, this form implicitly uses the
+"random" model.
+
 
 See C<http://libvirt.org/formatdomain.html#elementsRng> for complete
 details.
