virt-install: Add --tpm /dev/tpm convenience option

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1219,6 +1219,10 @@ An example invocation:
 
 Make the host's TPM accessible to a single guest.
 
+=item B<--tpm /dev/tpm>
+
+Convenience option for passing through the hosts TPM.
+
 =back
 
 See C<http://libvirt.org/formatdomain.html#elementsTpm> for complete
