cli: Combine registering a bunch of common options

--- a/man/virt-image.pod
+++ b/man/virt-image.pod
@@ -159,7 +159,7 @@ This option is deprecated in favor of C<--graphics none>
 
 =over 2
 
-=item -p, --print
+=item --print-xml
 
 Print the libvirt XML, but do not start the guest.
 
